# skymarket

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
frontend_react/: Dockerfile  package-lock.json  package.json
frontend_react/src/: index.js  index.scss
frontend_react/src/components/addCard/: AddCard.js
frontend_react/src/components/app/: App.js  App.scss
frontend_react/src/components/button/: Button.js  Button.scss
frontend_react/src/components/buttons/: Buttons.js  Buttons.scss
frontend_react/src/components/card/: Card.js  Card.scss
frontend_react/src/components/cards/: Cards.js  Cards.scss
frontend_react/src/components/changePassword/: ChangePassword.js
frontend_react/src/components/comentForm/: CommentForm.js  (+1 more)
frontend_react/src/context/: AuthContext.js  MainContext.js
frontend_react/src/utils/: axiosInstance.js  useAxios.js
market_postgres/: docker-compose.yaml  nginx.conf
skymarket/: manage.py
skymarket/ads/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_auto_20220924_1745.py
skymarket/fixtures/: ad.json  comments.json  users.json
skymarket/redoc/: apps.py  urls.py  views.py
skymarket/redoc/templates/: Redoc.html  redoc-2.json
skymarket/skymarket/: asgi.py  settings.py  urls.py  wsgi.py
skymarket/users/: admin.py  email.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_auto_20220922_2157.py  0003_alter_user_phone.py  0004_auto_20220924_1745.py
(+47 files in other folders)
