[tool.poetry]
name = "skymarket"
version = "0.1.0"
description = ""
authors = ["Kirill-oss67 <Yakovkirill-roslavl@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uuid = "^1.30"
drf-spectacular = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
