[tool.poetry]
name = "skymarket"
version = "0.1.0"
description = ""
authors = ["Kirill-oss67 <Yakovkirill-roslavl@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uuid = "^1.30"
drf-spectacular = "^0.24.1"
pip = "^22.2.2"
install = "^1.3.5"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
